test/functions/diten/unresolvedCallBigParamString.good
unresolvedCallBigParamString.chpl:7: error: unresolved call 'foo("1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890")'
unresolvedCallBigParamString.chpl:1: note: candidates are: foo(i: int)
